[package]
name = "test-utils"
authors = ["equilibrium"]
version = "0.1.0"
edition = "2018"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
substrate-fixed = { workspace = true }

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../eq-primitives"
version = "0.1.0"

[dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
package = "financial-pallet"
branch = "release-polkadot-v1.1.0"
version = "0.1.2"

[features]
default = ["std"]
std = ["sp-std/std", "financial-pallet/std", "substrate-fixed/std"]
