[package]
name = "chainbridge"
version = "1.2.0"
authors = ["david@chainsafe.io"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.123", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
optional = true
package = "frame-benchmarking"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"


[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-utils/std",
  "eq-assets/std",
  "eq-oracle/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime"
]
