[package]
name = "chainbridge"
version = "1.2.0"
authors = ["david@chainsafe.io"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
serde = { version = "1.0.123", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# primitives
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.1.0" }

# frame dependencies
frame-support = {workspace = true}
eq-utils = { path = "../../eq-utils", default-features = false }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-assets = { path = "../eq-assets", default-features = false }
eq-balances = { path = "../eq-balances", default-features = false }

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"


[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-utils/std",
  "eq-assets/std",
  "eq-oracle/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime"
]
