[package]
authors = ["user ^_^"]
edition = "2018"
name = "eq-aggregates"
version = "0.1.0"


[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "frame-system"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dependencies.sp-arithmetic]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dev-dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"


[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "serde",
  "eq-primitives/std",
  "eq-balances/std",
  "sp-arithmetic/std",
  "eq-utils/std",
  "eq-oracle/std"
]
try-runtime = [
  "frame-support/try-runtime"
]
