[package]
authors = ["user ^_^"]
edition = "2018"
name = "eq-aggregates"
version = "0.1.0"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-balances = { path = "../eq-balances", default-features = false }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"


[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "serde",
  "eq-primitives/std",
  "eq-balances/std",
  "sp-arithmetic/std",
  "eq-utils/std",
  "eq-oracle/std"
]
try-runtime = [
  "frame-support/try-runtime"
]
