[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-assets"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
financial-pallet = { workspace = true }
xcm = { workspace = true }
sp-application-crypto = { workspace = true }
sp-io = { workspace = true }

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0.123"
optional = true
features = ["derive"]

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
production = []
std = [
  "serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "eq-primitives/std",
  "xcm/std",
  "eq-utils/std",
  "frame-benchmarking/std",
]
test = []
runtime-benchmarks = [
  "frame-benchmarking",
]
try-runtime = [
  "frame-support/try-runtime",
]
