[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-bailsman"
version = "0.1.0"


[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.sp-arithmetic]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"

[dependencies.eq-oracle]
optional = true
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "frame-system"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.timestamp]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
default-features = false
package = "pallet-timestamp"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
optional = true
package = "frame-benchmarking"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dependencies.financial-pallet]
default-features = false
git = "ssh://git@gitlab.equilab.io/eqlab/substrate/financial-pallet.git"
branch = "polkadot-v0.9.29"
package = "financial-pallet"
version = "0.1.2"

[dependencies.financial-primitives]
default-features = false
git = "ssh://git@gitlab.equilab.io/eqlab/substrate/financial-pallet.git"
branch = "polkadot-v0.9.29"
package = "financial-primitives"
version = "0.1.0"

[dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"
optional = true


[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "sp-core/std",
  "sp-io/std",
  "sp-application-crypto/std",
  "frame-support/std",
  "frame-system/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-oracle/std",
  "sp-std/std",
  "timestamp/std",
  "serde",
  "financial-pallet/std",
  "financial-primitives/std",
  "eq-assets/std",
  "frame-benchmarking/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists/runtime-benchmarks",
  "eq-primitives/runtime-benchmarks",
  "eq-oracle"
]
test = []
try-runtime = [
  "frame-support/try-runtime"
]
