[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-bailsman"
version = "0.1.0"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
financial-pallet = { workspace = true }
financial-primitives = { workspace = true }
sp-application-crypto = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }
substrate-fixed = { workspace = true, optional = true }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-primitives = { path = "../../eq-primitives", default-features = false }

[dev-dependencies]
xcm = { workspace = true }
xcm-executor = { workspace = true }


[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "sp-io/std",
  "sp-application-crypto/std",
  "frame-support/std",
  "frame-system/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-oracle/std",
  "sp-std/std",
  "pallet-timestamp/std",
  "serde",
  "financial-pallet/std",
  "financial-primitives/std",
  "eq-assets/std",
  "frame-benchmarking/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists/runtime-benchmarks",
  "eq-primitives/runtime-benchmarks",
  "eq-oracle"
]
test = []
try-runtime = [
  "frame-support/try-runtime"
]
