[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-balances"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
frame-support = {workspace = true}
serde = {version = "1.0.123", optional = true, features = ["derive"]}
impl-trait-for-tuples = "0.1.3"
safe-mix = {default-features = false, version = "1.0.0"}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-io = { workspace = true }
# Polkadot dependencies
xcm = { workspace = true }
xcm-executor = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-xcm = { path = "../../eq-xcm", default-features = false }

substrate-fixed = { workspace = true }
financial-pallet = { workspace = true }
financial-primitives = { workspace = true }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "serde",
  "codec/std",
  "frame-system/std",
  "frame-support/std",
  "safe-mix/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "eq-primitives/std",
  "eq-assets/std",
  "eq-utils/std",
  "eq-oracle/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "xcm/std",
  "xcm-executor/std",
  "scale-info/std",
  "eq-xcm/std",
  "polkadot-parachain-primitives/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists",
  "eq-oracle",
]
production = []
try-runtime = [
  "frame-support/try-runtime",
]
