[package]
name = "eq-bridge"
version = "1.2.0"
authors = ["equilibrium"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
chainbridge = { path = "../chainbridge", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", optional = true }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
# polkadot dependencies
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
optional = true
package = "frame-benchmarking"

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"
optional = true

[dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"
optional = true

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dev-dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"


[features]
default = ["std"]
std = [
	"serde",
	"chainbridge/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"eq-primitives/std",
	"eq-balances/std",
	"eq-utils/std",
	"eq-oracle/std",
	"eq-whitelists/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"eq-oracle",
	"eq-whitelists",
]
try-runtime = [
  "frame-support/try-runtime",
]
